--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <p>
             <strong>The Boy Who Refuses To Move On</strong> <br>
             & <br>
-            <strong>The Girl Who Is "Just A Girl"</strong>
+            <strong>The Girl Worth The War</strong>
         </p>
 
         <div class="section-title">Preamble:</div>
